--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "@angular/platform-browser": "~10.1.2",
     "@angular/platform-browser-dynamic": "~10.1.2",
     "@angular/router": "~10.1.2",
+    "@service-work/is-loading": "^3.0.3",
     "bootstrap": "^4.5.0",
-    "firebase": "^7.13.1",
+    "firebase": "^7.21.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "ngx-material-timepicker": "^5.5.3",
