--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "~10.1.2",
     "@angular/router": "~10.1.2",
     "@service-work/is-loading": "^3.0.3",
+    "angular-google-charts": "^1.1.6",
     "bootstrap": "^4.5.0",
     "firebase": "^7.21.1",
     "hammerjs": "^2.0.8",
