--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "@service-work/is-loading": "^3.0.3",
     "angular-google-charts": "^1.1.6",
     "bootstrap": "^4.5.0",
-    "firebase": "^7.21.1",
+    "firebase": "^7.24.0",
+    "geofirestore": "^4.4.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "ngx-google-places-autocomplete": "^2.0.5",
     "ngx-image-compress": "^8.0.4",
     "ngx-image-cropper": "^3.2.1",
+    "ngx-infinite-scroll": "^10.0.1",
     "ngx-material-timepicker": "^5.5.3",
     "node-sass": "^4.14.1",
     "popper.js": "^1.16.1",
