--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ngx-material-timepicker": "^5.5.3",
     "node-sass": "^4.14.1",
     "popper.js": "^1.16.1",
+    "razorpay": "^2.0.6",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
