--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
     "firebase": "^7.24.0",
     "geofirestore": "^4.4.1",
     "hammerjs": "^2.0.8",
+    "html2canvas": "^1.0.0-rc.7",
     "jquery": "^3.5.1",
+    "jspdf": "^2.3.0",
     "ngx-google-places-autocomplete": "^2.0.5",
     "ngx-image-compress": "^8.0.4",
     "ngx-image-cropper": "^3.2.1",
+    "ngx-img-fallback": "^1.3.4",
     "ngx-infinite-scroll": "^10.0.1",
     "ngx-material-timepicker": "^5.5.3",
     "node-sass": "^4.14.1",
