--- a/package.json
+++ b/package.json
@@ -11,66 +11,66 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^3.0.0-beta.0",
-    "@angular/animations": "^10.1.2",
-    "@angular/cdk": "^10.1.3",
-    "@angular/common": "~10.1.2",
-    "@angular/compiler": "~10.1.2",
-    "@angular/core": "~10.1.2",
-    "@angular/fire": "^6.1.2",
-    "@angular/flex-layout": "^10.0.0-beta.32",
-    "@angular/forms": "~10.1.2",
-    "@angular/material": "^10.1.3",
-    "@angular/platform-browser": "~10.1.2",
-    "@angular/platform-browser-dynamic": "~10.1.2",
-    "@angular/router": "~10.1.2",
-    "@service-work/is-loading": "^3.0.3",
-    "angular-google-charts": "^1.1.6",
-    "bootstrap": "^4.5.0",
-    "firebase": "^7.24.0",
-    "geofirestore": "^4.4.1",
+    "@angular-devkit/build-angular": "^12.2.0",
+    "@angular/animations": "^12.2.0",
+    "@angular/cdk": "^12.2.0",
+    "@angular/common": "~12.2.0",
+    "@angular/compiler": "~12.2.0",
+    "@angular/core": "~12.2.0",
+    "@angular/fire": "^6.1.5",
+    "@angular/flex-layout": "^12.0.0-beta.34",
+    "@angular/forms": "~12.2.0",
+    "@angular/material": "^12.2.0",
+    "@angular/platform-browser": "~12.2.0",
+    "@angular/platform-browser-dynamic": "~12.2.0",
+    "@angular/router": "~12.2.0",
+    "@service-work/is-loading": "^5.2.0",
+    "angular-google-charts": "^2.2.2",
+    "bootstrap": "^5.1.0",
+    "firebase": "^8.9.0",
+    "geofirestore": "^4.4.2",
     "hammerjs": "^2.0.8",
-    "html2canvas": "^1.0.0-rc.7",
-    "jquery": "^3.5.1",
-    "jspdf": "^2.3.0",
+    "html2canvas": "^1.2.1",
+    "jquery": "^3.6.0",
+    "jspdf": "^2.3.1",
     "ngx-google-places-autocomplete": "^2.0.5",
-    "ngx-image-compress": "^8.0.4",
-    "ngx-image-cropper": "^3.2.1",
+    "ngx-image-compress": "^11.0.3",
+    "ngx-image-cropper": "^4.0.1",
     "ngx-img-fallback": "^1.3.4",
     "ngx-infinite-scroll": "^10.0.1",
     "ngx-material-timepicker": "^5.5.3",
-    "node-sass": "^4.14.1",
     "popper.js": "^1.16.1",
     "razorpay": "^2.0.6",
-    "rxjs": "~6.5.5",
-    "tslib": "^2.0.0",
-    "webrtc-adapter": "^7.7.0",
-    "zone.js": "~0.10.3"
+    "rxjs": "~7.3.0",
+    "sass": "^1.36.0",
+    "tslib": "^2.3.0",
+    "webrtc-adapter": "^8.1.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/architect": ">= 0.900 < 0.1100",
-    "@angular-devkit/build-angular": "~0.1001.2",
-    "@angular/cli": "~10.1.2",
-    "@angular/compiler-cli": "~10.1.2",
+    "@angular-devkit/architect": "^0.1202",
+    "@angular/cli": "~12.2.0",
+    "@angular/compiler-cli": "~12.2.0",
     "@types/googlemaps": "3.39.12",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0-next.1",
-    "firebase-tools": "^8.0.0",
+    "@types/jasmine": "~3.8.2",
+    "@types/jasminewd2": "~2.0.10",
+    "@types/node": "^16.4.13",
+    "codelyzer": "^6.0.2",
+    "firebase-tools": "^9.16.0",
     "fuzzy": "^0.1.3",
-    "inquirer": "^6.2.2",
-    "inquirer-autocomplete-prompt": "^1.0.1",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "inquirer": "^8.1.2",
+    "inquirer-autocomplete-prompt": "^1.4.0",
+    "jasmine-core": "~3.8.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "open": "^7.0.3",
-    "prettier": "2.1.2",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~4.0.1",
+    "karma-jasmine-html-reporter": "^1.7.0",
+    "open": "^8.2.1",
+    "prettier": "2.3.2",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "typescript": "~3.9.5"
+    "ts-node": "~10.2.0",
+    "typescript": "~4.3.5"
   }
 }
